tests/ui/nll/relate_tys/universe-violation.stderr
error[E0308]: mismatched types
  --> $DIR/universe-violation.rs:13:31
   |
LL |     let b: fn(&u32) -> &u32 = a;
   |                               ^ one type is more general than the other
   |
   = note: expected fn pointer `for<'a> fn(&'a u32) -> &'a u32`
              found fn pointer `fn(&u32) -> &u32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
